--- a/README.html
+++ b/README.html
@@ -10,7 +10,7 @@ Site built on Kirby and Shopify. You can learn more about Kirby at <a href="http
 
 <p>Production using Codekit, and <code>php -S localhost:8000 kirby/router.php</code> in terminal.</p>
 
-<p>Deployed via deploybot, hosted on bluehost.</p>
+<p>Deployed via launchdeck.io, hosted on bluehost.</p>
 
 </body>
 </html>
